--- a/public/careers.html
+++ b/public/careers.html
@@ -41,8 +41,8 @@
                   >
                   <a
                     class="px-4 py-2 text-gray-700 hover:text-gray-900 transition duration-500 ease-in-out hover:rounded hover:bg-gray-200 rounded text-gray-900"
-                    href="careers.html"
-                    >Careers</a
+                    href="blog.html"
+                    >Blog</a
                   >
                   <a
                     class="px-4 py-2 text-gray-700 hover:text-gray-900 transition duration-500 ease-in-out hover:rounded hover:bg-gray-200 rounded text-gray-900"
@@ -58,80 +58,41 @@
       <!-- End Nav ---------------------------------------------------------------------------------------------->
 
       <!-- Start Page 1 (Welcome Page) -------------------------------------------------------------------------->
-
-      <div class="py-16 px-4 md:px-16 lg:px-0">
-        <section class="container mx-auto">
-          <h2 class="text-5xl md:text-6xl lg:text-5xl font-bold text-left font-heading text-rez-navy">Sometimes we write things</h2>
-          <h2 class="text-2xl md:text-3xl lg:text-3xl text-left mb-20 font-heading text-rez-primary-purple ">We hope you enjoy our ramblings</h2>
-          <div class="flex flex-wrap -mx-4">
-            <div class="w-full lg:w-1/3 px-4 mb-8 lg:mb-0">
-              <div class="h-full pb-8 rounded shadow-md">
-                <a href="#">
-                  <img
-                    class="mb-10"
-                    src="img/illustrations/dashboard-chart-primary.svg"
-                    alt=""
-                  />
-                  <div class="px-6">
-                    <small>22 Oct 2019 | By Michael Scott</small>
-                    <h3 class="text-xl my-3 font-heading">
-                      How to blah to the blah
-                    </h3>
-                    <p class="text-gray-500">
-                      The wise man once said: "Friend first, boss second,
-                      entertainer third". That man was me.
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            
-            <div class="w-full lg:w-1/3 px-4 mb-8 lg:mb-0">
-              <div class="h-full pb-8 rounded shadow-md">
-                <a href="#">
-                  <img
-                    class="mb-10"
-                    src="img/illustrations/dashboard-chart-navy.svg"
-                    alt=""
-                  />
-                  <div class="px-6">
-                    <small>22 Oct 2019 | By Michael Scott</small>
-                    <h3 class="text-xl my-3 font-heading">
-                      How to blah to the blah
-                    </h3>
-                    <p class="text-gray-500">
-                      The wise man once said: "Friend first, boss second,
-                      entertainer third". That man was me.
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="w-full lg:w-1/3 px-4 mb-8 lg:mb-0">
-              <div class="h-full pb-8 rounded shadow-md">
-                <a href="#">
-                  <img
-                    class="mb-10"
-                    src="img/illustrations/dashboard-chart-light-blue.svg"
-                    alt=""
-                  />
-                  <div class="px-6">
-                    <small>22 Oct 2019 | By Michael Scott</small>
-                    <h3 class="text-xl my-3 font-heading">
-                      How to blah to the blah
-                    </h3>
-                    <p class="text-gray-500">
-                      The wise man once said: "Friend first, boss second,
-                      entertainer third". That man was me.
-                    </p>
-                  </div>
-                </a>
-              </div>
+      
+      <div class="py-16 px-4 md:px-16 lg:px-0 bg-gray-100">
+        <div class="container mx-auto py-4">
+          <div class="py-4">
+            <div class="lg:w-3/12 col-md-4 mx-auto text-center mb-10">
+              <img
+                src="img/illustrations/hiring.svg "
+                class="lazy mx-auto w-100 w-1/2 lg:w-full"
+                alt="Drawing Moonlanding"
+              />
             </div>
           </div>
-        </section>
+          <div class="">
+            <div class="lg:w-4/6 mx-auto text-center">
+              <h2
+                class="text-3xl md:text-4xl lg:text-4xl font-bold text-rez-navy"
+              >
+                We are at full capacity atm
+              </h2>
+              <p class="text-lg md:text-xl lg:text-lg pt-4 pb-8 text-rez-navy">
+                Unfortunately we don't seem to have any open positions at the minute. However please dont hesitate to drop us your CV.
+                <strong>We will be growing very soon.</strong>
+              </p>
+  
+              <blockquote
+                class="text-rez-primary-purple italic text-xl lg:text-xl"
+              >
+                careers@digital-rez.online <span class="wave ml-4">👋</span>
+              </blockquote>
+            </div>
+          </div>
+        </div>
       </div>
+  
+
     </div>
     <!-- End Page 1 (Welcome Page) -------------------------------------------------------------------------->
 
@@ -147,14 +108,14 @@
             <ul class="flex flex-">
               <li class="active px-md-3 px-2">
                 <a
-                  class="px-4 py-2 text-gray-700 hover:text-gray-900 transition duration-500 ease-in-out hover:rounded hover:bg-gray-200 rounded text-gray-900"
-                  href="index.html"
-                  >Home</a
-                >
+                    class="px-4 py-2 text-gray-700 hover:text-gray-900 transition duration-500 ease-in-out hover:rounded hover:bg-gray-200 rounded text-gray-900"
+                    href="index.html"
+                    >Home</a
+                  >
                 <a
                   class="px-4 py-2 text-gray-700 hover:text-gray-900 transition duration-500 ease-in-out hover:rounded hover:bg-gray-200 rounded text-gray-900"
-                  href="careers.html"
-                  >Careers</a
+                  href="blog.html"
+                  >Blog</a
                 >
               </li>
               <li class="px-md-3 px-2">
