--- a/public/docs.html
+++ b/public/docs.html
@@ -61,75 +61,9 @@
 
       <div class="py-16 px-4 md:px-16 lg:px-0">
         <section class="container mx-auto">
-          <h2 class="text-5xl md:text-6xl lg:text-5xl font-bold text-left font-heading text-rez-navy">Sometimes we write things</h2>
-          <h2 class="text-2xl md:text-3xl lg:text-3xl text-left mb-20 font-heading text-rez-primary-purple ">We hope you enjoy our ramblings</h2>
-          <div class="flex flex-wrap -mx-4">
-            <div class="w-full lg:w-1/3 px-4 mb-8 lg:mb-0">
-              <div class="h-full pb-8 rounded shadow-md">
-                <a href="#">
-                  <img
-                    class="mb-10"
-                    src="img/illustrations/dashboard-chart-primary.svg"
-                    alt=""
-                  />
-                  <div class="px-6">
-                    <small>22 Oct 2019 | By Michael Scott</small>
-                    <h3 class="text-xl my-3 font-heading">
-                      How to blah to the blah
-                    </h3>
-                    <p class="text-gray-500">
-                      The wise man once said: "Friend first, boss second,
-                      entertainer third". That man was me.
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            
-            <div class="w-full lg:w-1/3 px-4 mb-8 lg:mb-0">
-              <div class="h-full pb-8 rounded shadow-md">
-                <a href="#">
-                  <img
-                    class="mb-10"
-                    src="img/illustrations/dashboard-chart-navy.svg"
-                    alt=""
-                  />
-                  <div class="px-6">
-                    <small>22 Oct 2019 | By Michael Scott</small>
-                    <h3 class="text-xl my-3 font-heading">
-                      How to blah to the blah
-                    </h3>
-                    <p class="text-gray-500">
-                      The wise man once said: "Friend first, boss second,
-                      entertainer third". That man was me.
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="w-full lg:w-1/3 px-4 mb-8 lg:mb-0">
-              <div class="h-full pb-8 rounded shadow-md">
-                <a href="#">
-                  <img
-                    class="mb-10"
-                    src="img/illustrations/dashboard-chart-light-blue.svg"
-                    alt=""
-                  />
-                  <div class="px-6">
-                    <small>22 Oct 2019 | By Michael Scott</small>
-                    <h3 class="text-xl my-3 font-heading">
-                      How to blah to the blah
-                    </h3>
-                    <p class="text-gray-500">
-                      The wise man once said: "Friend first, boss second,
-                      entertainer third". That man was me.
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
+          <h2 class="text-5xl md:text-6xl lg:text-5xl font-bold text-left font-heading text-rez-navy">Fancy how to guides</h2>
+          <h2 class="text-2xl md:text-3xl lg:text-3xl text-left mb-20 font-heading text-rez-primary-purple ">Coming soon-ish</h2>
+           
         </section>
       </div>
     </div>
@@ -160,8 +94,8 @@
               <li class="px-md-3 px-2">
                 <a
                   class="px-4 py-2 text-gray-700 hover:text-gray-900 transition duration-500 ease-in-out hover:rounded hover:bg-gray-200 rounded text-gray-900"
-                  href="docs.html"
-                  >Docs</a
+                  href="blog.html"
+                  >Blog</a
                 >
               </li>
             </ul>
