--- a/public/signup.html
+++ b/public/signup.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
   <link rel="stylesheet" href="build/tailwind.css" />
   <title>SaasFolio TailwindCSS</title>
   <meta name="description" content="SaasFolio is a conversion optimized landing page template for SaaS and Startups. It differences itself from other templates, by focussing on strong sales copy"/>
